--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+	
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+	
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -16,7 +22,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/cal.css">
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
 	<link rel="stylesheet" href="css/datepickk.min.css">
 	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
     <script src="js/datepickk.min.js"></script>
@@ -630,16 +636,36 @@
 							<div class="col-xs-12">
 							<div class="row">
 								 <div class="col-md-3 col-sm-6" style="">
-									<select   style="background: #eeeeee url('location.png') no-repeat !important;background-position: 96% 46% !important;background-size: 16px !important;" id="from" class="form-control trip_input location-icon" >
-									<!-- <select name="select1" onmousedown="if(this.options.length>5){this.size=5;}" onchange='this.size=1;' onblur="this.size=1;"> -->
-									    <option value="" disabled selected="selected" style="display:none;">From</option>
-									    <option>Ahmedabad (AMD) </option>
-<option>Amritsar (ATQ) </option>
-<option>Bagdogra (IXB) </option><option>Bengaluru (BLR) </option><option>Bhubaneswar (BBI) </option><option>Chandigarh (IXC) </option><option>Goa (GOI) </option><option>Guwahati (GAU) </option><option>Hyderabad (HYD) </option><option>Jammu (IXJ) </option><option>Jodhpur (JDH) </option><option>Kochi (COK) </option><option>Kolkata (CCU) </option><option>Leh (IXL) </option><option>Lucknow (LKO) </option><option>Mumbai (BOM) </option><option>New Delhi (DEL) </option><option>Port Blair (IXZ) </option><option>Pune (PNQ) </option><option>Ranchi (IXR) </option><option>Srinagar (SXR) </option><option>Varanasi (VNS) </option>
-
-										
-									</select>
-									<!-- <span class="location_icon"></span> -->
+									  <div class="dropdown flight-dropdown">
+    <button class="flight-dropdown-btn btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">From
+    <span class="location_icon"></span></button>
+    <ul id ="book-flight" class="dropdown-menu flight-dropdown-list" role="menu" aria-labelledby="menu1">
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+      <li><a href="#book-flight">HTML</a></li>
+      <li><a href="#book-flight">CSS</a></li>
+      <li><a href="#book-flight">JavaScript</a></li>
+      <li><a href="#book-flight">About Us</a></li>
+    </ul>
+  </div>
 									<span class="roundtrip_icon hidden-xs"></span>
 								</div> 
 								
@@ -2289,7 +2315,13 @@
   <script  src="js/main-ui.js"></script> 
 <!--   <script src="js/input-select2.js"></script> -->
   
-  
+      <script>
+        $('.dropdown-menu').on( 'click', 'a', function() {
+    var text = $(this).html();
+    var htmlText = text + ' <span class="location_icon"></span>';
+    $(this).closest('.dropdown').find('.dropdown-toggle').html(htmlText);
+});
+</script>
   
   <!--Depart calender script-->
   <script>
